# GugleAudio

./: .gitignore  Cargo.toml
.github/workflows/: release.yml
app/: index.html  package-lock.json  package.json
app/src/: App.tsx  styles.css
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs  meter.rs  router.rs
crates/net/: Cargo.toml
crates/net/src/: lib.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs
