[workspace]
members = [
    "crates/proto",
    "crates/engine",
    "crates/net",
    "app/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["GugleAudio"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
wasapi = "0.16"
windows = { version = "0.62", features = ["Win32_Media_Audio", "Win32_System_Com"] }
