[package]
name = "gugleaudio-app"
version = "0.1.0"
edition.workspace = true

[package.metadata]

[lib]
name = "gugleaudio_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
engine = { path = "../../crates/engine" }
proto = { path = "../../crates/proto" }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2", features = [] }
tokio = { workspace = true }
